--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "_shared/*": ["_shared/*"],
+      "assets/*": ["assets/*"],
+      "pages/*": ["pages/*"],
+    },
   },
   "include": [
     "src"
